Bug 1661869 - Fix screenshotting of WebGL canvases. r=gfx-reviewers,lsalzman

For WebGL canvases with preserveDrawingBuffer:false, frontbuffer
snapshotting was not working properly.
If the frontbuffer had no user-fb associated with it,
was inexplicably calling BindDefaultFBForRead, which binds
*webgl*'s default FB, not *gl*'s default FB 0.
This caused frontbuffer snappshotting to actually snapshot the (cleared)
backbuffer instead of the visible frontbuffer contents.

Differential Revision: https://phabricator.services.mozilla.com/D126024