dom/canvas/WebGLContext.cpp
@@ -996,14 +996,7 @@ Maybe<uvec2> WebGLContext::FrontBufferSnapshotInto(
     }
   });
 
-  if (front->mFb) {
-    gl->fBindFramebuffer(fbTarget, front->mFb->mFB);
-  } else {
-    if (!BindDefaultFBForRead()) {
-      gfxCriticalError() << "BindDefaultFBForRead failed";
-      return {};
-    }
-  }
+  gl->fBindFramebuffer(fbTarget, front->mFb ? front->mFb->mFB : 0);
   if (pboWas) {
     BindBuffer(LOCAL_GL_PIXEL_PACK_BUFFER, nullptr);
   }
